Using minimizer now in builds and examples.

--- a/examples/ShellsortPerformance.html
+++ b/examples/ShellsortPerformance.html
@@ -77,7 +77,7 @@ div h1 {
    src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js">
 </script>
 
-<script src="../build/JSAV.js"></script>
+<script src="../build/JSAV-min.js"></script>
 
 <script>
 (function($) {
@@ -123,7 +123,7 @@ div h1 {
 
   // Process About button: Pop up a message with an Alert
   function About() {
-    var mystring = "Shellsort Performance Applet\nWritten by Cliff Shaffer and Ville Karavirta\nWritten during June, 2011\nLast update: June 23, 2011\nJSAV library version " + JSAV.version();
+    var mystring = "Shellsort Performance Applet\nWritten by Cliff Shaffer and Ville Karavirta\nWritten during June, 2011\nLast update: June 28, 2011\nJSAV library version " + JSAV.version();
     alert(mystring);
   }
 
