--- a/examples/shellsort.html
+++ b/examples/shellsort.html
@@ -31,7 +31,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.13/jquery-ui.min.js"></script>
 <script src="../lib/jquery.transform.js/jquery.transform.light.js"></script>
 <script src="../lib/raphael/raphael.js"></script>
-<script src="../build/JSAV.js"></script>
+<script src="../build/JSAV-min.js"></script>
 <script>
   var LIGHT = "rgb(215, 215, 215)";  // For "greying out" array elements
   var DARK = "black";                // Make array elements dark again
@@ -49,7 +49,7 @@
 
   // Process About button: Pop up a message with an Alert
   function About() {
-    var mystring = "Shellsort Performance Applet\nWritten by Cliff Shaffer and Ville Karavirta\nCreated as part of the OpenDSA hypertextbook project.\nFor more information, see\nSOME URL\nWritten during June, 2011\nLast update: June 23, 2011\nJSAV library version " + JSAV.version();
+    var mystring = "Shellsort Performance Applet\nWritten by Cliff Shaffer and Ville Karavirta\nCreated as part of the OpenDSA hypertextbook project.\nFor more information, see\nSOME URL\nWritten during June, 2011\nLast update: June 28, 2011\nJSAV library version " + JSAV.version();
 console.log("Doh");
     alert(mystring);
   }
