--- a/examples/shellsort.html
+++ b/examples/shellsort.html
@@ -21,7 +21,7 @@
   }
 </style>
 <div id="container">
-  <table id=tableT style=" margin:-15px -10px;">
+  <table id=tableT style=" margin:-15px 0px;">
     <tr>
       <td>
     	<input type="button" name="about" value="About" />
@@ -31,7 +31,7 @@
       </td>
     </tr>
   </table>
-  <p class="output line"></p>
+  <p class="output line" style="margin:10px 0px"></p>
 </div>
 
 <script src="http://code.jquery.com/jquery-1.6.1.js"></script>
