--- a/examples/ShellsortPerformance.html
+++ b/examples/ShellsortPerformance.html
@@ -5,22 +5,19 @@
 <link href="hypertextbook.css" title="CSS" rel="stylesheet" type="text/css" />
 <link rel="stylesheet" href="../css/JSAV.css" type="text/css" />
 <style>
-body {
-  width: 94%;
-  max-width: 900px;
-  margin: 20px auto;
-  border: 1px solid black;
-  padding: 20px;
-  background-color: #efe;
-}
+
 #container {
+  width: 800px;
+  height: 350px;
+  border: 1px solid black;
+  background-color: #efe;
+  padding: 20px;
   overflow: hidden;
 }
 #left {
   float: left;
   width: 60%;
-  border-right: 1px dashed #ccc;
-  padding-right: 2.5%;
+  margin: 7px 0px 0px 0px;
 }
 #right {
   float: right;
@@ -33,15 +30,19 @@ div h1 {
 .jsavcontainer {
   background-color: #efe;
 }
+
+p.output.scroll {
+  height: 150px;
+}
+
 </style>
 </head>
 
 <body>
 <div id="container">
-  <form id="aboutform">
-    <input type="button" name="about" value="About" />
-  </form>
-  <h1>Shellsort Performance</h1>
+  <input type="button" name="about" value="About" />
+  <h1 style="margin:-40px 0px 0px 0px">Shellsort Performance</h1>
+
   <div id="left">
     <form id="ssperform">
       <p><label for="increments">Increments: Type your increment
@@ -86,10 +87,16 @@ div h1 {
   *  will need, including initialization for the OpenDSA library  *
   *  The first line you need to set to use your form's name       *
   ************************************************************** */
-  var context = $("#ssperform"); // Define the local context (from form name)
-  var c2 = $("#aboutform"); // Define the local context (from form name)
+  // Define the local context (from form name)
+  var context = $("#ssperform");
+  //containing HTML element with id ssperform.
+  // We turn off slideshow mode, since this is a "static"
+  // form-based activity
   var av = new JSAV("ssperform", {'animationMode': 'none'});
-  var Tell = function(msg, color) { av.umsg(msg, {color: color}); };   // Set up an output message buffer object 
+  // Set up an output message buffer object,
+  // and create a convenience function named Tell
+  var Tell = function(msg, color) { av.umsg(msg, {color: color}); };
+
   /* **************************************************************
   *        Everything below this is specific to this AV           *
   ************************************************************** */
@@ -98,12 +105,11 @@ div h1 {
   *  This section connects the action callbacks to the            *
   *  form entities.                                               *
   ************************************************************** */
-  $('input[name="about"]', c2).click(About);
+  $('input[name="about"]').click(About);
   $('input[name="run"]', context).click(RunIt);
   $('input[name="clear"]', context).click(Clear);
   $('input[name="arraysize"]', context).focusout(Change);
   $('input[name="increments"]', context).focusout(CheckIncrements);
-
 
   // The permanent array of numbers.
   // This is "permanent" in that we want to use the same values
@@ -123,7 +129,7 @@ div h1 {
 
   // Process About button: Pop up a message with an Alert
   function About() {
-    var mystring = "Shellsort Performance Applet\nWritten by Cliff Shaffer and Ville Karavirta\nWritten during June, 2011\nLast update: June 28, 2011\nJSAV library version " + JSAV.version();
+    var mystring = "Shellsort Performance Activity\nWritten by Cliff Shaffer and Ville Karavirta\nCreated as part of the OpenDSA hypertextbook project.\nFor more information, see http://algoviz.org/eBook\nWritten during June, 2011\nLast update: July 26, 2011\nJSAV library version " + JSAV.version();
     alert(mystring);
   }
 
