Preparing for v0.0.1 release: set tag; rename the AV stylesheet

--- a/examples/ShellsortPerformance.html
+++ b/examples/ShellsortPerformance.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>ShellSort Performance</title>
-<link href="hypertextbook.css" title="CSS" rel="stylesheet" type="text/css" />
+<link href="AeBookAV.css" title="CSS" rel="stylesheet" type="text/css" />
 <link rel="stylesheet" href="../css/JSAV.css" type="text/css" />
 <style>
 
