--- a/examples/shellsort.html
+++ b/examples/shellsort.html
@@ -3,7 +3,7 @@
 <head>
   <title>Shellsort v0.0.01</title>
   <meta charset="utf-8" />
-  <link href="hypertextbook.css" title="CSS" rel="stylesheet" type="text/css" />
+  <link href="AeBookAV.css" title="CSS" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="../css/JSAV.css" media="screen" />
 </head>
 <body>
