--- a/examples/shellsort.html
+++ b/examples/shellsort.html
@@ -130,7 +130,7 @@
   av.step().umsg("and so on.");
   arr.unhighlight([1, 5, 9, 13]).css([1, 5, 9, 13], {"color": LIGHT}).highlight([2, 6, 10, 14]);
 
-  av.step().umsg("and so on.");
+  av.step();
   arr.unhighlight([2, 6, 10, 14]).css([2, 6, 10, 14], {"color": LIGHT}).highlight([3, 7, 11, 15]);
 
   av.step().umsg("Each sublist of four elements would also be sorted using an Insertion Sort.");
@@ -141,8 +141,8 @@
 
   av.step().umsg("At the end of processing sublists with increment 4, the array is \"even more sorted\".");
 
-  arr.css(function(i)
-    { return arr.value(i) !== origarr.value(i); }, {"color": "#0f0"});
+  arr.css(function(index)
+    { return arr.value(index) !== origarr.value(index); }, {"color": "#0f0"});
 
   arrlabel.text("Values in <b style='color:#0f0;'>green</b> have been swapped from their original positions.");
   origarr.show();
@@ -156,13 +156,9 @@
   origarr.hide();
   origlabel.hide();
 
-//  arr.css(function(index)
-//    { return index%2 != 0;}, {"color": LIGHT});
   arr.highlight([0, 2, 4, 6, 8, 10, 12, 14]);
   av.step();
   arr.unhighlight([0, 2, 4, 6, 8, 10, 12, 14]).highlight([1, 3, 5, 7, 9, 11, 13, 15]);
-  av.step();
-  arr.unhighlight([1, 3, 5, 7, 9, 11, 13, 15]).highlight([0, 2, 4, 6, 8, 10, 12, 14]);
 
   av.step().umsg("As usual, we sort the sublists using Insertion Sort.");
   arr.unhighlight();
@@ -184,34 +180,30 @@
 
   av.step().umsg("Finally, the array is sorted.");
   arr.unhighlight();
+  av.recorded();
+
   $("#forward").click(function() {
     $("#container").trigger("forward");
   });
   $("#backward").click(function() {
     $("#container").trigger("backward");
   });
-  av.recorded();
 
   // Partial Shellsort. Sweep with the given increment
   function sweep(myarr, incr) {
+    var highlightArray;
+
     for (var j=0; j<incr; j++) {         // Sort each sublist
       // Highlight the sublist
-
-// This following line of code should be able to replace the seven
-// lines of code to make a loop to compute the index list, but it
-// isn't working for some reason.
-//      myarr.highlight(function(index) { return index%incr == j;});
-      var highlightArray = [];
+      highlightArray = []; // Create the list of indices to highlight
       for (var k=0; k < myarr.size(); k++) {
-        if (k%incr == j) {
-          highlightArray.push(k);
-        }
+        if (k%incr == j) { highlightArray.push(k); }
       }
       myarr.highlight(highlightArray);
 
       av.step();
       inssort(myarr, j, incr);
-      myarr.unhighlight();
+      myarr.unhighlight(highlightArray);
     }
   }
 
