--- a/examples/shellsort.html
+++ b/examples/shellsort.html
@@ -108,8 +108,8 @@
 
   arr.unhighlight();
 
-  arr.css(function(i)
-    { return arr.value(i) !== origarr.value(i); }, {"color": "#0f0"});
+  arr.css(function(index)
+    { return arr.value(index) !== origarr.value(index); }, {"color": "#0f0"});
 
   arrlabel.text("Values in <b style='color:#0f0;'>green</b> were swapped during this pass");
   origarr.show();
@@ -158,7 +158,7 @@
 
   arr.highlight([0, 2, 4, 6, 8, 10, 12, 14]);
   av.step();
-  arr.unhighlight([0, 2, 4, 6, 8, 10, 12, 14]).highlight([1, 3, 5, 7, 9, 11, 13, 15]);
+  arr.unhighlight([1, 3, 5, 7, 9, 11, 13, 15]).highlight([0, 2, 4, 6, 8, 10, 12, 14]);
 
   av.step().umsg("As usual, we sort the sublists using Insertion Sort.");
   arr.unhighlight();
