Removed the submodules and added the required libs to libs. Updated all examples. See #18.

--- a/examples/shellsort.html
+++ b/examples/shellsort.html
@@ -36,8 +36,8 @@
 
 <script src="http://code.jquery.com/jquery-1.6.1.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.13/jquery-ui.min.js"></script>
-<script src="../lib/jquery.transform.js/jquery.transform.light.js"></script>
-<script src="../lib/raphael/raphael.js"></script>
+<script src="../lib/jquery.transform.light.js"></script>
+<script src="../lib/raphael.js"></script>
 <script src="../build/JSAV-min.js"></script>
 <script>
   var LIGHT = "rgb(215, 215, 215)";  // For "greying out" array elements
