Added support for slideshow counter. See issue #21.

--- a/examples/shellsort.html
+++ b/examples/shellsort.html
@@ -27,7 +27,7 @@
     	<input type="button" name="about" value="About" onClick="About();"/>
       </td>
       <td width=700px>
-    	<div class="controls"></div>
+    	<div class="controls"><span class="counter"></span></div>
       </td>
     </tr>
   </table>
