Tests for slideshow counter (#21)

--- a/test/index.html
+++ b/test/index.html
@@ -37,6 +37,7 @@
 	<div id="qunit-fixture">
 	  <div id="arraycontainer">
       <div class="controls"></div>
+      <div class="counter"></div>
       <p class="output line"></p>
       <ol id="array">
         <li>12</li>
