Adjusted positioning of elements in shellsort walkthrough to accomodate new slide counter.

--- a/examples/shellsort.html
+++ b/examples/shellsort.html
@@ -21,13 +21,14 @@
   }
 </style>
 <div id="container">
-  <table id=tableT style=" margin:-15px 0px;">
+  <table id=tableT style="margin-top:-15px; margin-bottom:-15px">
     <tr>
+      <td width=100><span class="counter"></span></td>
+      <td width=650px>
+    	<div class="controls"></div>
+      </td>
       <td>
     	<input type="button" name="about" value="About" onClick="About();"/>
-      </td>
-      <td width=700px>
-    	<div class="controls"><span class="counter"></span></div>
       </td>
     </tr>
   </table>
