Minor cleanup of the HTML

--- a/examples/ShellsortPerformance.html
+++ b/examples/ShellsortPerformance.html
@@ -58,7 +58,7 @@ p.output.scroll {
       <p class="output scroll" readonly="readonly"
          style=""></p>
     </form>
-  </div id="left">
+  </div> <!--left-->
 
   <div id="right">
     <h2>Directions</h2>
@@ -70,9 +70,9 @@ p.output.scroll {
       <p>Remember that your series should always end in 1.</p>
       <p>You can set the list size. Run this on some bigger lists
          to get a more realistic idea of the costs.</p>
-    </div id="directions">
-  </div id="right">
-</div id="container">
+    </div> <!--directions-->
+  </div> <!--right-->
+</div> <!--container-->
 
 <script
    src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js">
