--- a/examples/shellsort.html
+++ b/examples/shellsort.html
@@ -40,6 +40,7 @@
 <script src="../lib/jquery.transform.light.js"></script>
 <script src="../build/JSAV-min.js"></script>
 <script>
+(function($) {
   var LIGHT = "rgb(215, 215, 215)";  // For "greying out" array elements
   var DARK = "black";                // Make array elements dark again
   // Convenience function for setting another type of highlight
@@ -220,7 +221,7 @@
       arr.highlight(j);
     }
   }
-
+})(jQuery);
 </script>
 </body>
 </html>
