--- a/examples/ShellsortProficiency.html
+++ b/examples/ShellsortProficiency.html
@@ -3,7 +3,7 @@
 <head>
 <title>ShellSort Proficiency Exercise</title>
 <link href="AeBookAV.css" title="CSS" rel="stylesheet" type="text/css" />
-<link rel="stylesheet" href="../JSAV/css/JSAV.css" type="text/css" />
+<link rel="stylesheet" href="../css/JSAV.css" type="text/css" />
 <style>
 
 #container {
